; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_exception.c___exception_close.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_exception.c___exception_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@exception_location = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__exception_close(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  store i64 %0, i64* %2, align 8
  %5 = load i32*, i32** @exception_location, align 8
  %6 = load i64, i64* %2, align 8
  %7 = getelementptr inbounds i32, i32* %5, i64 %6
  %8 = load i32, i32* %7, align 4
  %9 = or i32 -2147483648, %8
  %10 = zext i32 %9 to i64
  %11 = inttoptr i64 %10 to i8*
  store i8* %11, i8** %4, align 8
  %12 = load i64, i64* %3, align 8
  %13 = call i32 @_CPU_ISR_Disable(i64 %12)
  %14 = load i64, i64* %2, align 8
  %15 = call i32 @__exception_sethandler(i64 %14, i32* null)
  %16 = load i8*, i8** %4, align 8
  %17 = bitcast i8* %16 to i64*
  store i64 1275068516, i64* %17, align 8
  %18 = load i8*, i8** %4, align 8
  %19 = call i32 @DCFlushRangeNoSync(i8* %18, i32 256)
  %20 = load i8*, i8** %4, align 8
  %21 = call i32 @ICInvalidateRange(i8* %20, i32 256)
  %22 = call i32 (...) @_sync()
  %23 = load i64, i64* %3, align 8
  %24 = call i32 @_CPU_ISR_Restore(i64 %23)
  ret void
}

declare dso_local i32 @_CPU_ISR_Disable(i64) #1

declare dso_local i32 @__exception_sethandler(i64, i32*) #1

declare dso_local i32 @DCFlushRangeNoSync(i8*, i32) #1

declare dso_local i32 @ICInvalidateRange(i8*, i32) #1

declare dso_local i32 @_sync(...) #1

declare dso_local i32 @_CPU_ISR_Restore(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
